# hypercluster

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md  cli.md  fabric.md  gpu-probe.md  jobs.md  live-qa.md  marketplace.md  scoring.md  security.md  tee.md
docs/miner/: README.md
docs/operations/: README.md
docs/provider/: README.md
scripts/: check_no_verda.py  stage_base_wheel.sh
scripts/qa/: __init__.py  host_gpu_probe.py  product_path.py  verda_client.py  verda_single_gpu_smoke.py
src/hypercluster/: __init__.py  app.py  cli.py  cli_common.py  cli_ops.py  no_verda.py  settings.py  weight_push.py  weights.py
src/hypercluster/api/: __init__.py  auth.py  prices.py  public.py
src/hypercluster/attest/: __init__.py  compose_hash.py  gpu_evidence.py  models.py  offline_fixtures.py  policy.py  report_data.py  verify.py
src/hypercluster/db/: __init__.py  database.py  models.py
src/hypercluster/domain/: __init__.py  aggregation.py  fabric_reports.py  gpu_probes.py  gpu_scoring_integrity.py  incentive.py  job_lifecycle.py  job_queue.py  jobs.py  leases.py  nodes.py  offers.py  points.py  pricing.py  providers.py  scoring.py  scoring_tee.py  tee_proofs.py
src/hypercluster/fabric/: __init__.py  discovery.py  gates.py  launcher.py  planner.py  report.py
src/hypercluster/probe/: __init__.py  allowlist.py  fixtures.py  keys.py  (+8 more)
tests/: conftest.py  test_package_import.py
tests/api/: test_create_and_boot.py  test_gpu_price_routes.py  test_gpu_probe_routes.py  test_identity_endpoints.py  test_job_admit.py  test_job_binding_queue.py  test_job_lifecycle.py  test_marketplace_auth.py  test_offer_price_catalog_default.py  test_offers_guardrails.py  test_points_routes.py  test_providers_and_nodes.py  test_rent_lease_pod_lifecycle.py  test_sqlite_config_and_isolation.py
tests/attest/: __init__.py  test_offline_verify_core.py  test_tee_bonus_and_persistence.py
tests/cli/: __init__.py  test_cli_fabric_attest_score.py  test_cli_gpu_probe_evidence.py  test_cli_marketplace_nodes_jobs.py  test_cli_packaging_and_core.py  test_cli_points.py  test_cli_prices.py  test_cli_sim_doctor_seed.py  test_cross_docker_scenario_proxy.py  test_cross_happy_path_sim.py  test_cross_market_resilience_auth.py  test_cross_multinode_fabric_tee.py  test_cross_weights_leaderboard_selfdeal.py  test_cross_worker_durability_paths.py  test_marketplace_sim_scenario.py  test_scaffold_cli_and_sim.py  test_scenario_suite.py  test_tee_offline_scenario_and_compose_hash.py
tests/docker/: __init__.py  test_docker_lifecycle.py  test_dockerfile_contract.py
tests/domain/: test_gpu_price_catalog.py  test_gpu_price_domain_crud.py  test_gpu_price_seed.py  test_gpu_scoring_integrity.py  test_incentive_normalize.py  test_m8_live_qa_helpers.py  test_m9_host_gpu_probe_qa.py  test_no_verda_in_product.py  test_points_earn_from_scores.py  test_points_ledger.py  test_price_regression_gates.py  test_price_weight_earn.py  test_scoring_aggregation_leaderboard.py  test_scoring_four_factor.py  test_weight_push_and_get.py
tests/fabric/: test_launcher_honesty.py  test_modes_and_gates.py  test_planner.py  test_report_bundle_and_plan.py  test_report_model.py  test_require_ib_rent_consistency.py
tests/probe/: __init__.py  test_fake_ssh_transport_matrix.py  test_gpu_probe_model_and_checks.py  test_ssh_allowlist_executor.py
(+28 files in other folders)
