[project]
name = "hypercluster"
version = "0.1.0"
description = "Hypercluster compute power challenge for BASE Intelligence"
requires-python = ">=3.12"
dependencies = [
  "aiosqlite>=0.20.0",
  # Ship pin (matches prism / release wheel). Local `uv` overrides via tool.uv.sources.
  "base @ https://github.com/BaseIntelligence/base/releases/download/v3.1.2/base-3.1.2-py3-none-any.whl#sha256=3a61c2d3a343ed6de55e80215486e3de0c9639276443d08f2ed316bc807f2ff0",
  "fastapi>=0.115.0",
  "httpx>=0.27.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "sqlalchemy[asyncio]>=2.0.32",
  "typer>=0.12.0",
  "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
dev = [
  "hatchling>=1.25.0",
  "mypy>=1.10.0",
  "pytest>=8.3.0",
  "pytest-asyncio>=0.23.0",
  "ruff>=0.6.0",
]

[project.scripts]
hypercluster = "hypercluster.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hypercluster"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.uv.sources]
base = { path = "../platform", editable = true }

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
# Live commercial-cloud rentals (Verda ops QA) are opt-in only (VAL-LIVE-010).
# Default `uv run pytest` never selects the live_verda marker and never auto-loads
# external ops secret files. Never add that mark to default addopts.
markers = [
  "live_verda: external Verda/single-GPU ops QA (opt-in; never default CI)",
  "tee_live: optional live TEE hardware path (skip unless HYPER_TEE_LIVE)",
  "integration: optional live/integration path (never default CI; real SSH opt-in)",
]
filterwarnings = [
  "ignore::DeprecationWarning",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.12"
packages = ["hypercluster"]
mypy_path = ["src"]
ignore_missing_imports = true
warn_unused_ignores = false
